# wwi-ctf-2020

./: .gitignore  README.md  docker-compose.prod.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf
nginx/: Dockerfile  healthcheck
tasks/LittleFiercefulSturdyRegime/: flag.txt  task.txt
tasks/LittleFiercefulSturdyRegime/source/: Cargo.toml
tasks/LittleFiercefulSturdyRegime/source/src/: main.rs
tasks/base6/: enc.txt  gen.py  solve.py  task.txt  text.txt
tasks/bluebird/: hide_flag.py
tasks/bootloader/: hello.efi  task.txt
tasks/confucius-tradition-1/: Dockerfile  Makefile  confucius.cpp  flag.txt  generate.py  task.txt
tasks/confucius-tradition-2/: Dockerfile  Makefile  confucius.cpp  flag.txt  generate.py  sol.sage  task.txt
tasks/dzida/: 99-beers.rec  Dockerfile  dzida.py  recurse_interpreter.py  secret.py  server.py  test-in.rec
tasks/editor/: Dockerfile  flag.txt  nsjail.sh
tasks/everything-doesnt-exist/: flag.txt  main  main.cpp
tasks/f-droid/: task.txt
tasks/fast-and-furious/: Dockerfile  main.py
tasks/file-doesnt-exist/: CMakeLists.txt  main  main.cpp
tasks/fileshare/: task.txt
tasks/interceptor/: Dockerfile  client.go  server.go
tasks/pure-encryption/: task.txt  text
tasks/secure-random/: Dockerfile  Makefile  challenge.c  flag.txt  task.txt
tasks/strace/: client  task.txt
tasks/text-flag/: Dockerfile  healthcheck  task.txt
tasks/virtually-correct/: Dockerfile  Makefile  flag.txt  main  main.cpp  nsjail.sh
tasks/xorey/: challenge.cpp  challenge.cpp.orig  output.txt  task.txt
(+27 files in other folders)
