[package]
name = "little_fierceful_sturdy_regime"
version = "0.1.0"
authors = ["Michał Radwański <lisklusownik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
rand = "*"

[[bin]]
name = "little_fierceful_sturdy_regime"
path = "src/main.rs"
